--- a/app/views/members/_notes.html.erb
+++ b/app/views/members/_notes.html.erb
@@ -2,19 +2,25 @@
 
 <% notes.each do |note| %>
   <table class="table table-bordered">
-    <tr>
-      <th>
-        <%= note.disposition_type if !note.disposition_type.nil? %> - 
-        <%= note.communication_type if !note.communication_type.nil? %>        
-        <%= t('added_by') %>
-        <%= note.created_by.username %>
-        <%= distance_of_time_in_words(note.created_at, Time.now, include_seconds = false, options = {}) %> <%= t(:ago) %>
-      </th>
-    <tr class='comment' >
-      <td>
-        <%= note.description %>
-      </td>
-    </tr>
+    <thead> 
+      <tr>
+        <th>
+          <%= note.disposition_type if !note.disposition_type.nil? %> - 
+          <%= note.communication_type if !note.communication_type.nil? %>        
+          <%= t('added_by') %>
+          <%= note.created_by.username %>
+          <%= distance_of_time_in_words(note.created_at, Time.now, include_seconds = false, options = {}) %> <%= t(:ago) %>
+        </th>
+        <td style = "width:200px">
+          <%= t('created_at') %>:
+          <%= I18n.l note.created_at, :format => :long %>
+        </td>
+      <tr class='comment' >
+        <td colspan="2">
+          <%= note.description %>
+        </td>
+      </tr>
+    </thead>
   </table>
 <% end %>
   
