Fixed some buttons text

--- a/app/views/member_notes/new.html.erb
+++ b/app/views/member_notes/new.html.erb
@@ -12,8 +12,8 @@
       <td> <%= f.text_area :description, :style => 'width: 99%; height: 200px', :class => 'required' %> </td>
     </tr>
     <tr> 
-      <td> <%= submit_tag t('add'), :class => 'btn btn-primary' %>
-           <%= link_to t(:back), :back, :class => 'btn' %> 
+      <td> <%= submit_tag t('buttons.save_member_note'), :class => 'btn btn-primary' %>
+           <%= link_to t('buttons.return_to_member_show'), :back, :class => 'btn' %> 
       </td> 
     </tr>
   </table>
