--- a/app/views/credit_cards/_form.html.erb
+++ b/app/views/credit_cards/_form.html.erb
@@ -12,8 +12,8 @@
     </td>
   </tr>
   <tr class="control-group">
-    <th colspan="2"> <%= f.submit nil, :class => 'btn btn-primary' %>
-    <%= link_to t(:Cancel), show_member_path, :class => 'btn' %> </th>
+    <th colspan="2"> <%= f.submit t('buttons.save_credit_card'), :class => 'btn btn-primary' %>
+    <%= link_to t('buttons.return_to_member_show'), show_member_path, :class => 'btn' %> </th>
   </tr>
 
 </table>
