--- a/app/views/admin/agents/index.html.erb
+++ b/app/views/admin/agents/index.html.erb
@@ -1,42 +1,24 @@
 <%- model_class = Agent.new.class -%>
 <h1><%=t '.title', :default => model_class.model_name.human.pluralize %></h1>
-<table class="table table-striped datatable">
+
+<table id="agents_table" class="display" data-source="<%= admin_agents_url(format: "json") %>">
   <thead>
     <tr>
-      <th><%= model_class.human_attribute_name(:id) %></th>
-      <th><%= model_class.human_attribute_name(:email) %></th>
-      <th><%= model_class.human_attribute_name(:username) %></th>
-      <th><%= model_class.human_attribute_name(:locked_at) %></th>
-      <th><%= model_class.human_attribute_name(:created_at) %></th>
-      <th><%= model_class.human_attribute_name(:actions) %></th>
+      <th><%= t('activerecord.attributes.agent.id') %></th>
+      <th><%= t('activerecord.attributes.agent.email') %></th>
+      <th><%= t('activerecord.attributes.agent.username') %></th>
+      <th><%= t('activerecord.attributes.agent.locked_at') %></th>
+      <th><%= t('activerecord.attributes.agent.created_at') %></th>
+      <th><%= t('actions') %></th>
     </tr>
   </thead>
   <tbody>
-    <% @agents.each do |agent| %>
-      <tr>
-        <td><%= link_to agent.id, admin_agent_path(agent) %></td>
-        <td><%= agent.email %></td>
-        <td><%= agent.username %></td>
-        <td><%= I18n.l agent.locked_at, :format => :long if !agent.locked_at.nil? %></td>
-        <td><%= I18n.l agent.created_at, :format => :long %></td>
-        <td>
-          <%= link_to t(:edit), edit_admin_agent_path(agent), :class => 'btn btn-mini' %>
-          <%= link_to t(:destroy), admin_agent_path(agent), :method => :delete,
-                      :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')),
-                      :class => 'btn btn-mini btn-danger' %>
-          <% if agent.locked_at.nil? %>
-            <%= link_to t(:lock), admin_agent_lock_path(agent.id), :class => 'btn btn-mini btn-danger' %>
-          <% else %>
-            <%= link_to t(:unlock), admin_agent_unlock_path(agent.id), :class => 'btn btn-mini btn-primary' %>     
-          <% end %>
-        </td>
-      </tr>
-    <% end %>
   </tbody>
 </table>
 
+<%= link_to t(:new), new_admin_agent_path, :class => 'btn btn-primary' %>
 
 
-<%= link_to t(:new),
-            new_admin_agent_path,
-            :class => 'btn btn-primary' %>
+<script>
+  $(document).ready(agent_index_functions());
+</script>
