fixed columns on agents dataTable.

--- a/app/views/admin/agents/index.html.erb
+++ b/app/views/admin/agents/index.html.erb
@@ -20,5 +20,5 @@
 
 
 <script>
-  $(document).ready(agent_index_functions());
+  $(document).ready(agent_index_functions(<% Agent.datatable_columns.size %>));
 </script>
