fixed transactions datatable columns

--- a/app/views/members/_transactions.html.erb
+++ b/app/views/members/_transactions.html.erb
@@ -15,5 +15,5 @@
 </table>
 
 <script>
-  $(document).ready(transactions_member_functions());
+  $(document).ready(transactions_member_functions(<% Transaction.datatable_columns.size %>));
 </script>
