fixed method to confirm if credit card is expired or not on member#show.

--- a/app/views/members/show.html.erb
+++ b/app/views/members/show.html.erb
@@ -131,8 +131,7 @@
 </table>
 
 <table
-  <% if (Time.now.year > @active_credit_card.expire_year) || 
-        (Time.now.month > @active_credit_card.expire_month && Time.now.year == @active_credit_card.expire_year) %>
+  <% if @active_credit_card.am_card.expired? %>
     class="table table-bordered table-condensed card_expired"
   <% else %>
     class="table table-bordered table-condensed"
