fixed operation dataTable

--- a/app/views/members/_operations.html.erb
+++ b/app/views/members/_operations.html.erb
@@ -23,6 +23,17 @@
   </thead>
   <tbody>
   </tbody>
+  <tfoot>
+    <th  colspan="4">
+      <select class="dataselect">
+        <option value="all"> all </option>
+        <option value="billing"> billing </option>
+        <option value="communications"> communications </option>
+        <option value="profile"> profile </option>
+        <option value="others"> others </option>
+      </select>
+    </th>
+  </tfoot>
 </table>
 
 <script>
