--- a/app/views/members/_operations.html.erb
+++ b/app/views/members/_operations.html.erb
@@ -25,6 +25,7 @@
   </tbody>
   <tfoot>
     <th  colspan="4">
+      Filter by:
       <select class="dataselect">
         <option value="all"> all </option>
         <option value="billing"> billing </option>
