--- a/app/views/members/_form.html.erb
+++ b/app/views/members/_form.html.erb
@@ -1,7 +1,7 @@
 <table class="table table-condensed"> 
   <% if !@member.new_record? %>
   <tr class="control-group"> 
-    <td colspan="2">
+    <td colspan="4">
     <%= t('activerecord.attributes.member.member_group_type') %>:
     <% if !@member_group_types.nil? %>
       <%= f.select :member_group_type_id, 
@@ -22,11 +22,12 @@
   </tr>
   <tr class="control-group" >
     <td><%= f.label :address, t('activerecord.attributes.member.address'), :class => 'help-inline' %></td>
-    <td> <%= f.text_field :address, :class => 'text_field'%> </td> 
+    <td> <%= f.text_field :address, :class => 'text_field'%> 
       <% if !@member.new_record? && !@member.wrong_address.nil? %>
         <%= t('activerecord.attributes.member.unset_wrong_address') %>
         <%= check_box :setter, :wrong_address %>
       <% end %>
+    </td> 
     <td> <%= f.label :city, t('activerecord.attributes.member.city'), :class => 'help-inline' %> </td>
     <td> <%= f.text_field :city, :class => 'text_field input-medium'%> </td>
   </tr>
@@ -47,7 +48,6 @@
     <td> 
       <%= f.text_field :phone_number, :class => 'text_field input-medium'%> 
       <%= render :partial => "shared/help", :locals => { :title => t('example'), :content => t('activerecord.attributes.member.phone_number_help')} %>
-    </td>
       <% if !@member.new_record? && !@member.wrong_phone_number.nil? %>
         <%= t('activerecord.attributes.member.unset_wrong_phone_number') %>
         <%= check_box :setter, :wrong_phone_number %>
@@ -89,7 +89,7 @@
   <% end %>
   
   <tr class="control-group">
-    <th colspan="2"> <%= f.submit nil, :class => 'btn btn-primary' %>
+    <th colspan="4"> <%= f.submit nil, :class => 'btn btn-primary' %>
     <%= link_to t(:Cancel), :back, :class => 'btn'  if @member.new_record? %>  
     <%= link_to t('buttons.return_to_member_show'), :back, :class => 'btn' unless @member.new_record? %> </th>
   </tr>
