--- a/app/views/members/refund.html.erb
+++ b/app/views/members/refund.html.erb
@@ -19,5 +19,5 @@
 <% end%>
 
 <script>
-  $(document).ready(refound_member_functions());
+  $(document).ready(refund_member_functions());
 </script>
