ref#19294 - Fixed some bugs. We were calling wrong attributes for transaction.

--- a/app/views/notifier/decline_strategy_not_found.rhtml
+++ b/app/views/notifier/decline_strategy_not_found.rhtml
@@ -3,6 +3,6 @@ Message: <%= @message %>
 Membership_id: <%= @transaction.id %>
 Member: <%= @transaction.member.uuid %>
 CC type: <%= @transaction.credit_card_type %>
-Campaign type: <%= @transaction.membership_type %>
+Campaign type: <%= @transaction.transaction_type %>
 
 We have scheduled this billing to be run in 30 days. 
