--- a/app/views/members/show.html.erb
+++ b/app/views/members/show.html.erb
@@ -129,7 +129,7 @@
          <%= @current_member.member_group_type.nil? ? t('activerecord.attributes.member.not_group_associated') : @current_member.member_group_type.name %> 
     </td>
     <td> <%= t('activerecord.attributes.member.club_cash_amount') %>:
-         $<%= @current_member.club_cash_amount %>
+         <%= number_to_currency(@current_member.club_cash_amount) %>
     </td>
   </tr>
 </table>
