ref#19689 - Fixed method add_club_cash. Now it is called from api/members

--- a/app/views/members/add_club_cash.html.erb
+++ b/app/views/members/add_club_cash.html.erb
@@ -23,3 +23,10 @@
     </tr>
   </table>
 <% end %>
+
+
+<script>
+  var visible_id = <%= @current_member.visible_id %>; 
+  var club_id = <%= @current_club.id %>
+  $(document).ready(club_cash_functions())
+</script>
