--- a/app/views/clubs/show.html.erb
+++ b/app/views/clubs/show.html.erb
@@ -19,6 +19,8 @@
               clubs_path, :class => 'btn'  %>
   <%= link_to t(:edit),
               edit_club_path(:id => @club.id), :class => 'btn' %>
+  <%= link_to t(:new_domain),
+              new_domain_path(:club_id => @club.id), :class => 'btn' %>
   <%= link_to t(:destroy),
               club_path(:id => @club.id),
               :method => 'delete',
