ref#21083 - Fixed member#cancel alerts.

--- a/app/views/members/cancel.html.erb
+++ b/app/views/members/cancel.html.erb
@@ -18,8 +18,7 @@
       </tr>
       <tr>
         <td> 
-          <%= submit_tag t('buttons.cancel_member'), :class => 'btn btn-primary', 
-                                   :confirm => t('text_cancel_are_you_sure') %>
+          <%= submit_tag t('buttons.cancel_member'), :class => 'btn btn-primary' %>
           <%= link_to t('buttons.return_to_member_show'), show_member_path, :class => 'btn' %> 
         </td>
       </tr>
