ref#21180 - made some changes on members#api/controller and members#model.

--- a/app/views/members/_form.html.erb
+++ b/app/views/members/_form.html.erb
@@ -101,7 +101,7 @@
 </table>
 
 <% if @member.new_record? %>
-  <%= hidden_field_tag :enrollment_amount, 0.0 %>
+  <%= hidden_field :enrollment_info, :enrollment_amount, :value => 0.0 %>
 <% end %>
 
 
