--- a/app/views/members/show.html.erb
+++ b/app/views/members/show.html.erb
@@ -144,7 +144,9 @@
   <thead>
     <tr>
       <th colspan="5"> Active Credit card </th>
+      <% if can? :see_last_digits, @active_credit_card %>
       <td> <%= t("activerecord.attributes.credit_card.number") %>: <%= @active_credit_card.number %> </td>
+      <% end %>
       <td> <%= t("activerecord.attributes.credit_card.expire_date") %>: 
            <%= @active_credit_card.expire_month %> / <%= @active_credit_card.expire_year %> 
       </td>
